Tue Mar 27 07:32:40 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/QtResource/QtResource_Factory.h:
          Use forward declaration of QApplication. Part of the patch of bugzilla
          2870. Thanks to Roland Sun <rolandsun at gmail dot com> for
          providing the patch

Mon Mar 26 20:44:40 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * performance-tests/Cubit/TAO/MT_Cubit/client.cpp
        * performance-tests/Cubit/TAO/MT_Cubit/client.h
        * examples/Simple/time/Time_Client_i.cpp
        * examples/Persistent_Grid/Grid_i.cpp

          Fixes for strict aliasing warnings.

Mon Mar 26 15:24:47 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tao/Compression/zlib/ZlibCompressor.cpp

          Addressed strict aliasing warning.

Mon Mar 26 14:52:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/PluggableUDP/tests/Basic/*:
        * tests/DIOP/*:
          Moved this test from examples to tests, this is a DIOP regression
          test that can be part of the orb test suite.

        * examples/PluggableUDP/tests/Makefile.am:
          Removed Basic directory

        * tests/Makefile.am:
          Added DIOP directory

Mon Mar 26 14:47:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/PluggableUDP/tests/Basic/client.cpp:
        * examples/PluggableUDP/tests/Basic/server.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_Client_i.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_i.cpp:
        * examples/PluggableUDP/tests/Basic/UDP_i.h:
          Small cleanup and simplifications

Mon Mar 26 10:01:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * tests/Big_Request_Muxing/client.cpp:
        * tests/Big_Request_Muxing/server.cpp:

          Give very generous timeouts for very slow systems (lynxos).

Sat Mar 24 23:40:17 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Security/EndpointPolicy/EndpointPolicy.mpc: