@@ -1,3 +1,10 @@
+Tues Mar 27 08:15:00 UTC 2007  Simon Massey  <sma@prismtech.com>
+
+        * tests/Big_Request_Muxing/run_test.pl:
+
+          Allow the new timeouts to actually take effect before
+          timing out the test!
+
 Tue Mar 27 07:32:40 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tao/QtResource/QtResource_Factory.h:
